# YDownloader-App

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
configs/: config.json
src/: main.py
